# paralel-computing

./: README.md
Dijkstra/: CMakeLists.txt  main.cpp
Floyd/: .gitignore  CMakeLists.txt  main.cpp
MPI/: CMakeLists.txt  Makefile  main.cpp
MPI/Matrices/: matrix_1000x1000  matrix_10x10
MatricesCUDA/matrixMultiply/: .gitignore  kernel.cu  matrixMultiply.sln  matrixMultiply.vcxproj
Prima/: .gitignore  CMakeLists.txt  Prima.sln  Prima.vcxproj  main.cpp
